# psychologiczne-iq-backend

./: Procfile  build.sh  data.json  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
api/: settings.py  urls.py
blog/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_author.py  0002_remove_tag_posts_by_tag.py  0003_alter_author_bio.py
blogPosts/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
blogPosts/migrations/: 0001_initial.py  0002_alter_paragraph_options_element_multi_columns_tab_and_more.py  0002_element_multi_columns_tab_button.py  0002_rename_grades_element_grade_and_more.py  0003_alter_paragraph_options.py  0003_rename_textwithimage_element_textwithimage.py  0004_button_text.py  0004_rename_bookcover_grade_book_cover_and_more.py  0005_remove_element_grade_grade_post_alter_element_name_and_more.py  0006_remove_element_textwithimage_textwithimage_elements.py  0007_remove_textwithimage_tag.py  0008_alter_grade_post_alter_paragraph_sub_title.py  0009_alter_textwithimage_image_and_more.py  0010_alter_paragraph_rich_text.py
