[tool.poetry]
name = "psychologiczne iq blog"
version = "0.1.0"
description = ""
authors = ["Gabriela Gradys <gabriela.gradys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"
django-grappelli = "3.0.3"
django-rest-framework = "0.1.0"
graphene = "3.1.1"
graphene-django = "3.0.0"
gunicorn = "^20.1.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
django-nested-admin = "^4.0.2"
django-cors-headers = "^4.1.0"
django-ckeditor = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
